# dsa-for-fun

./: .gitignore  LICENSE  Makefile.am  Makefile.manual  README.md  configure.ac
demos/: Makefile.am
demos/dll/: Makefile.am  main.c
demos/sll/: Makefile.am  main.c
include/dsa/: common.h  dll.h  sll.h
src/: Makefile.am
src/dll/: Makefile.am  dll.c
src/sll/: Makefile.am  sll.c
